# FDFI

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  setup.py  test_comprehensive.py  test_diagnostics.py  test_flow_explainer.py  test_plots_impl.py
.github/workflows/: publish.yml  tests.yml
20260212/: 20260131.md  flowexplainer_implementation_plan.md
case_study/: 2_real_data.ipynb  4_case_study（sens50）.ipynb  4_eot_case_study（sens50）.ipynb
case_study/data/: sens50_processed_dataset.csv
case_study/results/eot_case_study/: sens50_eot_dfi_results.csv
case_study/results/flowmatching_case_study/: sens50_flowmatching_dfi_results.csv
dfi/: __init__.py  explainers.py  models.py  plots.py  test1.py  utils.py
docs/: README.md  conf.py  getting_started.md  index.rst  requirements.txt
docs/api/: explainers.rst  index.rst  plots.rst  utils.rst
docs/case_studies/: eot_case_study_sens50.ipynb  flow_case_study_sens50.ipynb  index.rst
docs/case_studies/data/: feature_group.csv  ic50.censored_processed_dataset.csv  sens80_processed_dataset.csv
docs/case_studies/results/eot_case_study/: sens50_eot_dfi_results.csv
docs/case_studies/results/flowmatching_case_study/: sens50_flow_dfi_results.csv  sens50_flowmatching_dfi_results.csv
docs/tutorials/: confidence_intervals.ipynb  eot_explainer.ipynb  flow_explainer.ipynb  index.rst  ot_explainer.ipynb  quickstart.ipynb  visualization.ipynb
docs/user_guide/: choosing_explainer.rst  concepts.rst  faq.rst  installation.rst  interpreting_results.rst  statistical_inference.rst
examples/: README.md  basic_example.py  ctg_analysis_demo.ipynb  tree_example.py  verify_exp3.py
exports/overleaf_ctg/: ctg_implementation_jss.tex
fdfi/: __init__.py  explainers.py  losses.py  models.py  plots.py  test1.py  utils.py
tests/: test_explainers.py  test_init.py  test_losses.py  test_plots.py  test_utils.py
